--- a/newtask/build.gradle
+++ b/newtask/build.gradle
@@ -21,6 +21,12 @@ dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-security'
     compile group: 'org.springframework.boot', name: 'spring-boot', version: '1.5.10.RELEASE'
+    compile 'com.github.jsimone:webapp-runner:8.5.11.3'
 
-
+}
+tasks.stage.doLast() {
+    delete fileTree(dir: "build/distributions")
+    delete fileTree(dir: "build/assetCompile")
+    delete fileTree(dir: "build/distributions")
+    delete fileTree(dir: "build/libs", exclude: "*.war")
 }
