--- a/newtask/build.gradle
+++ b/newtask/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'org.springframework.boot' version '1.5.10.RELEASE'
     id 'java'
     id 'idea'
+    id 'war'
 }
 
 group 'com.ecreativ.test'
@@ -24,3 +25,18 @@ dependencies {
     compile 'com.github.jsimone:webapp-runner:8.5.11.3'
 
 }
+
+
+task stage() {
+    dependsOn clean, war
+}
+war.mustRunAfter clean
+
+task copyToLib(type: Copy) {
+    into "$buildDir/server"
+    from(configurations.compile) {
+        include "webapp-runner*"
+    }
+}
+
+stage.dependsOn(copyToLib)
