--- a/newtask/build.gradle
+++ b/newtask/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'org.springframework.boot' version '1.5.10.RELEASE'
     id 'java'
     id 'idea'
-    id 'jar'
+    id 'war'
 }
 
 group 'com.ecreativ.test'
@@ -27,15 +27,16 @@ dependencies {
 }
 
 
-task stage(type: Copy, dependsOn: [clean, build]) {
-    from jar.archivePath
-    into project.rootDir
-    rename {
-        'app.jar'
+task stage() {
+    dependsOn clean, war
+}
+war.mustRunAfter clean
+
+task copyToLib(type: Copy) {
+    into "$buildDir/server"
+    from(configurations.compile) {
+        include "webapp-runner*"
     }
 }
-stage.mustRunAfter(clean)
 
-clean << {
-    project.file('app.jar').delete()
-}
+stage.dependsOn(copyToLib)
