fix app.properties fix build gradle to try work with heroku

--- a/newtask/build.gradle
+++ b/newtask/build.gradle
@@ -27,16 +27,12 @@ dependencies {
 }
 
 
-task stage() {
-    dependsOn clean, war
-}
-war.mustRunAfter clean
+task stage(dependsOn: ['build', 'clean'])
+build.mustRunAfter clean
 
 task copyToLib(type: Copy) {
-    into "$buildDir/server"
-    from(configurations.compile) {
-        include "webapp-runner*"
-    }
+    into "$buildDir/lib"
+    from(configurations.compile)
 }
 
 stage.dependsOn(copyToLib)
