work with Forgot password

--- a/newtask/build.gradle
+++ b/newtask/build.gradle
@@ -23,6 +23,10 @@ dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-security'
     compile group: 'org.springframework.boot', name: 'spring-boot', version: '1.5.10.RELEASE'
     compile 'com.github.jsimone:webapp-runner:8.5.11.3'
+    compile group: 'org.springframework', name: 'spring-context-support', version: '5.0.8.RELEASE'
+    compile group: 'javax.mail', name: 'mail', version: '1.4'
+
+
 
 }
 
